--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -11,7 +11,6 @@
     <PackageReference Include="ITBees.Fas.Setup" Version="8.0.5" />
     <PackageReference Include="ITBees.Interfaces" Version="8.0.20" />
     <PackageReference Include="ITBees.Models" Version="8.0.45" />
-    <PackageReference Include="ITBees.UserManager" Version="8.0.119" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Stripe.net" Version="45.10.0" />
   </ItemGroup>  
@@ -22,6 +21,10 @@
   
   <ItemGroup>
     <Folder Include="Setup\" />
+  </ItemGroup>  
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\ITBees.UserManager\ITBees.UserManager\ITBees.UserManager.csproj" />
   </ItemGroup>  
   
 </Project>
