--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ITBees.Fas.Setup" Version="8.0.5" />
     <PackageReference Include="ITBees.Interfaces" Version="8.0.23" />
     <PackageReference Include="ITBees.Models" Version="8.0.46" />
+    <PackageReference Include="ITBees.UserManager" Version="8.0.124" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Stripe.net" Version="45.14.0" />
   </ItemGroup>  
@@ -21,5 +22,9 @@
   
   <ItemGroup>
     <Folder Include="Setup\" />
-  </ItemGroup> 
+  </ItemGroup>  
+  
+  <!--<ItemGroup>
+    <ProjectReference Include="..\..\ITBees.UserManager\ITBees.UserManager\ITBees.UserManager.csproj" />
+  </ItemGroup>--> 
 </Project>
