--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ITBees.Fas.Setup" Version="8.0.7" />
     <PackageReference Include="ITBees.Interfaces" Version="8.0.32" />
     <PackageReference Include="ITBees.Models" Version="8.0.52" />
+    <PackageReference Include="ITBees.UserManager" Version="8.0.161" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Stripe.net" Version="46.1.0" />
   </ItemGroup>  
@@ -21,10 +22,6 @@
   
   <ItemGroup>
     <Folder Include="Setup\" />
-  </ItemGroup>  
-  
-  <ItemGroup>
-    <ProjectReference Include="..\..\ITBees.UserManager\ITBees.UserManager\ITBees.UserManager.csproj" />
   </ItemGroup>  
   
   <!--<ItemGroup>
