fix html finished payment

--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="ITBees.RestfulApiControllers" Version="8.0.21" />
   </ItemGroup>  
   
+  <ItemGroup>
+    <ProjectReference Include="..\..\ITBees.PipedriveIntegration\ITBees.PipedriveIntegration\ITBees.PipedriveIntegration.csproj" />
+  </ItemGroup>  
+  
   <!--<ItemGroup>
     <ProjectReference Include="..\..\ITBees.UserManager\ITBees.UserManager\ITBees.UserManager.csproj" />
   </ItemGroup>--> 
