--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -10,8 +10,9 @@
      <ItemGroup>
         <PackageReference Include="ITBees.Fas.Setup" Version="8.0.13" />
         <PackageReference Include="ITBees.Interfaces" Version="8.0.59" />
-        <PackageReference Include="ITBees.Models" Version="8.0.82" />
-        <PackageReference Include="ITBees.UserManager" Version="8.0.298" />
+        <PackageReference Include="ITBees.Models" Version="8.0.83" />
+        <PackageReference Include="ITBees.UserManager" Version="8.0.301" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Stripe.net" Version="47.4.0" />
         <PackageReference Include="ITBees.RestfulApiControllers" Version="8.0.22" />
