--- a/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
+++ b/ITBees.FAS.Payments/ITBees.FAS.Payments.csproj
@@ -19,7 +19,7 @@
       </ItemGroup>  
   
 <!--    <ItemGroup>-->
-<!--        <ProjectReference Include="..\..\ITBees.PipedriveIntegration\ITBees.PipedriveIntegration\ITBees.PipedriveIntegration.csproj"/>-->
+<!--        <ProjectReference Include="..\..\ITBees.FAS.Setup\ITBees.FAS.Setup\ITBees.FAS.Setup.csproj" />-->
 <!--        <ProjectReference Include="..\..\ITBees.UserManager\ITBees.UserManager\ITBees.UserManager.csproj"/>-->
 <!--        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>-->
 <!--        <PackageReference Include="Stripe.net" Version="48.5.0"/>-->
